ch5/Services/nginx-app-host-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-path-ingress
spec:
  rules:
    - host: v1.example.com
      http:
        - path: /
          backend:
            serviceName: nginx-v1
            servicePort: 80
    - host: v2.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-v2
              servicePort: 80
